<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016 University of Sherbrooke
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Material Weather</string>

    //Menu
    <string name="menu_refresh">Rafraîchir</string>
    <string name="menu_favorite">Favoris</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_about">A propos</string>
    <string name="menu_map">Carte</string>
    <string name="menu_connection">API Favoris</string>

    //Tabs
    <string name="tab_current">Vue d\'ensemble</string>
    <string name="tab_forecast">Prévisions quotidiennes</string>

    //Weather Icons
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    //Weather Degrees
    <string name="weather_degrees_f">&#xf045;</string>
    <string name="weather_degrees_c">&#xf03c;</string>

    //Weather details
    <string name="weather_temperature">&#xf055;</string>
    <string name="weather_rain">&#xf019;</string>
    <string name="weather_wind">&#xf050;</string>
    <string name="weather_humidity">&#xf07a;</string>
    <string name="weather_barometer">&#xf079;</string>
    <string name="weather_visibility">&#xf079;</string>
    <string name="weather_sunrise">&#xf051;</string>
    <string name="weather_sunset">&#xf052;</string>

    //Weather units
    <string name="weather_unit_metric">°C</string>
    <string name="weather_unit_imp">°F</string>

    //Google Maps
    <string name="title_activity_maps">Position du comment sur la carte</string>
    <string name="default_info_title">Position par défaut</string>
    <string name="default_info_snippet">Aucun lieu n\'a été trouvé car l\'authorisation de la position n\'est pas activée.</string>

    //Preferences
    <string name="pref_key_location_toggle">key_location_toggle</string>
    <string name="pref_key_city">key_city</string>
    <string name="pref_key_country">key_country</string>
    <string name="pref_key_unit">key_unit</string>
    <string name="pref_key_notification_toggle">key_notification_toggle</string>

    <string name="pref_category_location">Position</string>
    <string name="pref_title_location_toggle">Utiliser la position GPS</string>
    <string name="pref_title_city">Nom de la ville</string>
    <string name="pref_summary_city_null">S\'il vous plaît, veuillez rentrer un nom de ville</string>
    <string name="pref_default_city">Sherbrooke</string>
    <string name="pref_title_country">Nom du pays</string>
    <string name="pref_default_country">Canada</string>
    <string name="pref_country_dialog_title">Choississez un pays</string>

    <string name="pref_category_unit">Mesures</string>
    <string name="pref_default_unit">c</string>
    <string name="pref_title_unites">Unités</string>
    <string name="pref_temperature_summary">Unité :</string>

    <string name="pref_category_notification">Notification</string>
    <string name="pref_title_notification_toggle">Activer les notifications</string>

    //About activity
    <string name="title_activity_about">A propos</string>

    <!-- Strings related to login -->
    <string name="prompt_fav">Ville, ville</string>
    <string name="title_activity_login">Connection</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_id">Id </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_mean">Inscription</string>
    <string name="action_connect_mean">Connexion</string>
    <string name="action_edit_mean">Modifier</string>
    <string name="action_logout_mean">Déconnexion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="appwidget_text">Liste des favoris</string>
    <string name="add_widget">Add widget</string>
</resources>
