<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 University of Sherbrooke
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_refresh"
        app:srcCompat="@drawable/ic_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/menu_refresh"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_favorite"
        app:srcCompat="@drawable/ic_favorite"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/menu_favorite"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_connection"
        android:title="@string/menu_connection"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_settings"
        app:srcCompat="@drawable/ic_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>